; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/can/usb/extr_mcba_usb.c_mcba_set_termination.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/can/usb/extr_mcba_usb.c_mcba_set_termination.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.mcba_priv = type { i32 }
%struct.mcba_usb_msg_termination = type { i32, i32 }
%struct.mcba_usb_msg = type { i32 }

@MBCA_CMD_SETUP_TERMINATION_RESISTANCE = common dso_local global i32 0, align 4
@MCBA_TERMINATION_ENABLED = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.net_device*, i64)* @mcba_set_termination to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mcba_set_termination(%struct.net_device* %0, i64 %1) #0 {
  %3 = alloca %struct.net_device*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.mcba_priv*, align 8
  %6 = alloca %struct.mcba_usb_msg_termination, align 4
  store %struct.net_device* %0, %struct.net_device** %3, align 8
  store i64 %1, i64* %4, align 8
  %7 = load %struct.net_device*, %struct.net_device** %3, align 8
  %8 = call %struct.mcba_priv* @netdev_priv(%struct.net_device* %7)
  store %struct.mcba_priv* %8, %struct.mcba_priv** %5, align 8
  %9 = getelementptr inbounds %struct.mcba_usb_msg_termination, %struct.mcba_usb_msg_termination* %6, i32 0, i32 0
  store i32 0, i32* %9, align 4
  %10 = getelementptr inbounds %struct.mcba_usb_msg_termination, %struct.mcba_usb_msg_termination* %6, i32 0, i32 1
  %11 = load i32, i32* @MBCA_CMD_SETUP_TERMINATION_RESISTANCE, align 4
  store i32 %11, i32* %10, align 4
  %12 = load i64, i64* %4, align 8
  %13 = load i64, i64* @MCBA_TERMINATION_ENABLED, align 8
  %14 = icmp eq i64 %12, %13
  br i1 %14, label %15, label %17

15:                                               ; preds = %2
  %16 = getelementptr inbounds %struct.mcba_usb_msg_termination, %struct.mcba_usb_msg_termination* %6, i32 0, i32 0
  store i32 1, i32* %16, align 4
  br label %19

17:                                               ; preds = %2
  %18 = getelementptr inbounds %struct.mcba_usb_msg_termination, %struct.mcba_usb_msg_termination* %6, i32 0, i32 0
  store i32 0, i32* %18, align 4
  br label %19

19:                                               ; preds = %17, %15
  %20 = load %struct.mcba_priv*, %struct.mcba_priv** %5, align 8
  %21 = bitcast %struct.mcba_usb_msg_termination* %6 to %struct.mcba_usb_msg*
  %22 = call i32 @mcba_usb_xmit_cmd(%struct.mcba_priv* %20, %struct.mcba_usb_msg* %21)
  ret i32 0
}

declare dso_local %struct.mcba_priv* @netdev_priv(%struct.net_device*) #1

declare dso_local i32 @mcba_usb_xmit_cmd(%struct.mcba_priv*, %struct.mcba_usb_msg*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
